[project]
name = "gpt-image-client"
version = "0.1.0"
description = "GPT Image-2 client via Codex proxy, backed by OpenAI SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpt_image_client"]
