[project]
name = "gpt-image-client"
version = "0.1.0"
description = "GPT Image-2 client via Codex proxy, using raw HTTP for proxy compatibility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpt_image_client"]
